# big-jhon-test

./: .gitignore  README.md  docker-compose.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/appointments/: apps.py  docs.yaml
backend/appointments/application/: services.py  validators.py
backend/appointments/domain/: enums.py  models.py
backend/appointments/infrastructure/: queries.py
backend/appointments/management/commands/: seed_appointments.py
backend/appointments/migrations/: 0001_initial.py
backend/appointments/presentation/: serializers.py  urls.py  views.py
backend/appointments/tests/: test_appointments.py
backend/config/: api_router.py  exceptions.py  schema.py  settings.py  urls.py  views.py
backend/users/: admin.py  apps.py  docs.yaml  models.py
backend/users/application/: exceptions.py  services.py  validators.py
backend/users/domain/: models.py
backend/users/management/commands/: seed_users.py
backend/users/migrations/: 0001_initial.py  0002_remove_user_username_alter_user_email.py  0003_remove_user_first_name_remove_user_last_name.py  0004_alter_user_managers.py
backend/users/presentation/: serializers.py  urls.py  views.py
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: axiosConfig.ts  endpoints.ts
frontend/src/components/: LoaderPage.tsx
frontend/src/constants/: routes.ts
frontend/src/hooks/: useAuth.ts
frontend/src/interfaces/: index.ts
frontend/src/router/: PrivateRoute.tsx  index.tsx  routes.tsx
(+21 files in other folders)
